packages/CodeStyle/Annotate/tests/valid/UnusedPrivateProperties.php
<?php

namespace Foo;


class Foo
{

	private $foo;



	public function foo()
	{
		$this->foo = 'bar';
	}

}
