packages/CodeStyle/Annotate/tests/invalid/ForceEmptyConstructorParenthesesInFunctionCall.php
<?php

$foo = foo(new Foo);
